# FusionHack_2026

./: .env.example  .gitignore  DATA_SOURCES.md  DATA_VERSION  README.md  aquiferwatch_spec.md  pyproject.toml  requirements.txt
aquiferwatch/: __init__.py  colab.py  config.py  mlflow_utils.py  schemas.py
aquiferwatch/analytics/: baseline.py  depletion.py  economics.py  extraction_imputation.py  models.py  saturated_thickness.py  scenarios.py
aquiferwatch/api/: router.py
aquiferwatch/data/: loaders.py  real.py  synthetic.py  synthetic_depletion.py
aquiferwatch/pipeline/: common.py  compose_baseline.py  deines_aim_hpa.py  eia_grid.py  eia_prices.py  ers_budgets.py  hpa_footprint.py  hpa_overlap.py  iwms_method_mix.py  iwms_water.py  kgs_hpa.py  kgs_master.py  kgs_wimas.py  kgs_wizard.py  nass_crops.py  ne_dnr.py  ngwmn.py  noaa_climdiv.py  tx_twdb.py  usda_irrigation.py  usgs_hpa_rasters.py  usgs_water_use.py  usgs_wells.py
data/: README.md
data/curated/: ne_nrd_rules.json
docs/: aquiferwatch_workflow.html  data_sources.md  handoff_vignesh.md  integration.md  limitations.md  methodology.md  scenarios.md
mlflow/: README.md  setup_dagshub.md
notebooks/: 00_template.ipynb  01_tx_extraction_imputation.ipynb  02_depletion_projection.ipynb  README.md
scripts/: build_county_history.py  build_irrigation_history.py  build_web_geojson.py  enrich_baseline.py  fetch_data.py  ingest_all.py  persist_predictions.py  precompute_scenarios.py  publish_curated.py  publish_data.py  pull_gwlevels_targeted.py
tests/: test_models.py  test_router.py  test_scenarios.py  test_schemas.py  test_synthetic_data.py
