[tool.poetry]
name = "aquiferwatch"
version = "0.1.0"
description = "County-level accountability platform for the Ogallala/High Plains Aquifer."
authors = ["Raj Vedire <rajashekarreddy091@gmail.com>"]
readme = "README.md"
packages = [{ include = "aquiferwatch" }]

[tool.poetry.dependencies]
python = "^3.11"
# Core data
polars = "^1.0"
duckdb = "^1.1"
pandas = "^2.2"
numpy = ">=1.26,<3.0"
pyarrow = ">=17.0"
# Geospatial
geopandas = "^1.0"
shapely = "^2.0"
rasterio = "^1.3"
pyproj = "^3.6"
# Modeling — tree ensembles + stacking
lightgbm = "^4.5"
xgboost = "^2.1"
catboost = "^1.2"
scikit-learn = "^1.5"
statsmodels = "^0.14"
# Experiment tracking
mlflow = "^2.17"
# HTTP / config
httpx = "^0.27"
requests = "^2.32"
pydantic = "^2.9"
pydantic-settings = "^2.5"
python-dotenv = "^1.0"
tenacity = "^9.0"
# Warehouse / storage
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
boto3 = "^1.35"
# API (thin; parent backend handles heavy lifting)
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
# Notebook stack
jupyter = "^1.1"
ipykernel = "^6.29"
matplotlib = "^3.9"
seaborn = "^0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.7"
mypy = "^1.11"
nbstripout = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
