[tool.poetry]
name = "aquiferwatch"
version = "0.1.0"
description = "County-level accountability platform for the Ogallala/High Plains Aquifer."
authors = ["Raj Vedire <rajashekarreddy091@gmail.com>"]
readme = "README.md"
packages = [{ include = "aquiferwatch" }]

# Runtime deps: only what the `aquiferwatch` library imports at import time
# or when notebooks call it. Deliberately minimal so `pip install
# git+https://.../FusionHack_2026.git --no-deps` in Colab doesn't stomp on
# the platform's pre-installed jupyter / ipykernel / matplotlib.
[tool.poetry.dependencies]
python = "^3.11"
# Data / modeling — imported by aquiferwatch.analytics, aquiferwatch.data
pandas = "^2.2"
numpy = ">=1.26,<3.0"
pyarrow = ">=17.0"
scikit-learn = "^1.5"
lightgbm = "^4.5"
xgboost = "^2.1"
catboost = "^1.2"
# Experiment tracking
mlflow = "^2.17"
# Config / HTTP
pydantic = "^2.9"
pydantic-settings = "^2.5"
python-dotenv = "^1.0"
boto3 = "^1.35"

# Pipelines: ingest + ETL. Only Raj needs these locally to refresh parquets.
# Vignesh in Colab fetches ready-made parquets from S3 and skips this group.
[tool.poetry.group.pipeline.dependencies]
polars = "^1.0"
duckdb = "^1.1"
geopandas = "^1.0"
shapely = "^2.0"
rasterio = "^1.3"
pyproj = "^3.6"
httpx = "^0.27"
requests = "^2.32"
tenacity = "^9.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
statsmodels = "^0.14"

# API: thin router that mounts into the parent Agricultural_Data_Analysis app.
[tool.poetry.group.api.dependencies]
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}

# Local notebook / dev tooling. Colab provides these — don't install them there.
[tool.poetry.group.dev.dependencies]
jupyter = "^1.1"
ipykernel = "^6.29"
matplotlib = "^3.9"
seaborn = "^0.13"
nbstripout = "^0.7"
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.7"
mypy = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
